# litestar

./: .all-contributorsrc  .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .snyk  .sourcery.yaml  .t.py.swp  .vale.ini  404.html  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  abcpy.py  adv_alchemy_tutorial.md  build.py  check_docs_examples.py  codecov.yml  contrib_sqlalchemy.md  docker-compose.yaml  genindex.html  index.html  mkdocs.yml  mypy-sqla-1x.ini  mypy.ini  objects.inv  poetry_build.py  py-modindex.html  pyproject.toml  requirements-docs.txt  (+12 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: BUG.yaml  BUG.yml  DOCS.yaml  DOCS.yml  REQUEST.yaml  REQUEST.yml  bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: cherry-pick-v2.yaml  ci.yaml  ci.yml  codeql.yml  docs-preview-test.yml  docs-preview.yaml  docs-preview.yml  docs.yaml  docs.yml  notify-released-issues.yml  test.yml  (+11 more)
1/: .buildinfo  benchmarks.html  contribution-guide.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
1.47/: 404.html  index.html  objects.inv  sitemap.xml
1.48/: 404.html  index.html  sitemap.xml
1.49/: 404.html  sitemap.xml
1.50/: changelog.html  objects.inv  py-modindex.html  searchindex.js
1.51/: .buildinfo  benchmarks.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2/: .buildinfo  benchmarks.html  changelog.html  contribution-guide.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
3/: .buildinfo  benchmarks.html  contribution-guide.html  genindex.html  getting-started.html  index.html  py-modindex.html  search.html  searchindex.js
3-dev/: .buildinfo  benchmarks.html  contribution-guide.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_static/: documentation_options.js  style.css
about/: index.html  organization.html  starlite-releases.html
artwork/: Stalite Logo.ai
benchmarks/: index.html
commands/: __init__.py  cli.py  list_routes.py
community/: contribution-guide.html  index.html
dev/: .buildinfo  404.html  benchmarks.html  changelog.html  contribution-guide.html  genindex.html  index.html  objects.inv  organization.html  py-modindex.html  search.html  searchindex.js  sitemap.xml  starlite-releases.html
develop/: benchmarks.html  contribution-guide.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: .ruff.toml  0-introduction.md  PYPI_README.md  benchmarks.md  benchmarks.rst  changelog.md  conf.py  contributing.md  getting-started.rst  governance-and-contribution.md  governance.md  index.md  index.rst  license.md  migration.md  migration_guide_3.rst  organization.rst  run_examples.py
docs_mkdocs/: benchmarks.md  index.md
examples/: __init__.py  hello_world.py  startup_and_shutdown.py  using_application_state.py
latest/: .buildinfo  404.html  benchmarks.html  contribution-guide.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
lib/: benchmarks.html  changelog.html
litestar/: __init__.py  __main__.py  _multipart.py  _parsers.py  app.py  background_tasks.py  concurrency.py  constants.py  controller.py  data_extractors.py  di.py  dto.py  enums.py  file_system.py  pagination.py  params.py  partial.py  plugins.py  response_containers.py  router.py  serialization.py  static_files.py  status_codes.py  typing.py
main/: .buildinfo  404.html  benchmarks.html  contribution-guide.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
migration/: index.html
performance_test/: README.md  package-lock.json  package.json  requirements.txt  run_profile_sequence.sh  run_starlite.py  test.sh
release-notes/: changelog_1.html  changelog_2.html  index.html  migration_guide_2.html  whats_new_2.html
scripts/: __init__.py  build-docs  fix_docstrings.py  serve-docs
search/: search_index.json
starlite/: __init__.py  __main__.py  _multipart.py  _parsers.py  app.py  asgi.py  background_tasks.py  cache.py  cli.py  config.py  connection.py  constants.py  controller.py  data_extractors.py  datastructures.py  decorators.py  di.py  dto.py  enums.py  exceptions.py  extras.py  file_system.py  handlers.py  kwargs.py  lifecycle_hooks.py  logging.py  middleware.py  multipart.py  openapi.py  pagination.py  params.py  parsers.py  partial.py  plugins.py  provide.py  queue_listener_handler.py  request.py  response.py  response_containers.py  route_handlers.py  (+15 more)
test_app/: main.py
test_apps/: debugging.py  pydantic_1_app.py
test_docs/: conf.py  index.rst  test.rst
tests/: __init__.py  conftest.py  docker-compose.yml  docker_service_fixtures.py  fake_memcached.py  helpers.py  mocks.py  models.py  piccolo_conf.py  profile_sqlalchemy_bulk_inserts.py  test.sqlite  test_app.py  test_caching.py  test_cli.py  test_commands.py  test_connection_lifecycle_hooks.py  test_controller.py  test_data_extractors.py  test_datastructures.py  test_decorators.py  test_dependency.py  test_dependency_injection.py  test_dto.py  test_dto_factory.py  test_enums.py  test_exception_handlers.py  test_exceptions.py  test_extras.py  test_file_system.py  test_guards.py  test_handler_arg_injection.py  test_handlers.py  test_imports.py  test_lifecycle_hooks.py  test_logging.py  test_openapi.py  test_option_requests.py  test_pagination.py  test_parameters.py  test_params.py  (+26 more)
tools/: README.md  TIMEOUT_ANALYSIS.md  build_docs.py  doc_examples.py  docs_preview_comments.py  find_timeout_workflows.py  fix_docstrings.py  md_to_rst.py  prepare_release.py  publish_docs.py  pypi_readme.py  run_examples.py  sphinx_ext.py  utils.py
(+7895 files in other folders)
