[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "route_map"
crate-type = ["cdylib"]
path = "extensions/route_map/lib.rs"

[dependencies]
pyo3 = { version = "0.16.5" }

[features]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
default = ["extension-module"]
