[project]
authors = [
  {name = "Cody Fincher", email = "cody.fincher@gmail.com"},
  {name = "Jacob Coffee", email = "jacob@z7x.org"},
  {name = "Janek Nouvertné", email = "provinzkraut@posteo.de"},
  {name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com"},
  {name = "Peter Schutt", email = "peter.github@proton.me"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anyio>=3",
  "httpx>=0.22",
  "exceptiongroup; python_version < \"3.11\"",
  "importlib-metadata; python_version < \"3.10\"",
  "importlib-resources>=5.12.0; python_version < \"3.9\"",
  "msgspec>=0.18.2",
  "multidict>=6.0.2",
  "polyfactory>=2.6.3",
  "pyyaml",
  "typing-extensions",
  "click",
  "rich>=13.0.0",
  "rich-click",
]
description = "Litestar - A production-ready, highly performant, extensible ASGI API Framework"
keywords = ["api", "rest", "asgi", "litestar", "starlite"]
license = {text = "MIT"}
maintainers = [
  {name = "Cody Fincher", email = "cody.fincher@gmail.com"},
  {name = "Jacob Coffee", email = "jacob@z7x.org"},
  {name = "Janek Nouvertné", email = "provinzkraut@posteo.de"},
  {name = "Peter Schutt", email = "peter.github@proton.me"},
]
name = "litestar"
readme = "README.md"
requires-python = ">=3.8,<4.0"
version = "2.6.0"

[project.urls]
Blog = "https://blog.litestar.dev"
Changelog = "https://github.com/litestar-org/litestar/releases/"
Discord = "https://discord.gg/litestar-919193495116337154"
Documentation = "https://docs.litestar.dev/"
Homepage = "https://litestar.dev/"
"Issue Tracker" = "https://github.com/litestar-org/litestar/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc"
Reddit = "https://www.reddit.com/r/LitestarAPI"
Repository = "https://github.com/litestar-org/litestar"
Twitter = "https://twitter.com/LitestarAPI"

[project.optional-dependencies]
annotated-types = ["annotated-types"]
attrs = ["attrs"]
brotli = ["brotli"]
cli = ["jsbeautifier", "uvicorn[standard]", "uvloop>=0.18.0; sys_platform != 'win32'"]
cryptography = ["cryptography"]
full = [
  "litestar[annotated-types,attrs,brotli,cli,cryptography,jinja,jwt,mako,minijinja,opentelemetry,piccolo,picologging,prometheus,pydantic,redis,sqlalchemy,standard,structlog]",
]
jinja = ["jinja2>=3.1.2"]
jwt = ["python-jose", "cryptography"]
mako = ["mako>=1.2.4"]
minijinja = ["minijinja>=1.0.0"]
opentelemetry = ["opentelemetry-instrumentation-asgi"]
piccolo = ["piccolo"]
picologging = ["picologging"]
prometheus = ["prometheus-client"]
pydantic = ["pydantic", "email-validator", "pydantic-extra-types"]
redis = ["redis[hiredis]>=4.4.4"]
sqlalchemy = ["advanced-alchemy>=0.2.2,<1.0.0"]
standard = ["jinja2", "jsbeautifier", "uvicorn[standard]", "uvloop>=0.18.0; sys_platform != 'win32'", "fast-query-parsers>=1.0.2"]
structlog = ["structlog"]

[project.scripts]
litestar = "litestar.__main__:run_cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  'docs/PYPI_README.md',
  '/Makefile',
  '/litestar',
  '/tests',
  '/CHANGELOG.rst',
]




[tool.pdm]
ignore_package_warnings = ["sphinx", "slotscheck"]

[tool.pdm.dev-dependencies]
dev = [
    "beanie>=1.21.0",
    "beautifulsoup4",
    "fsspec",
    "greenlet",
    "hypothesis",
    "python-dotenv",
    "starlette",
    "trio",
    "aiosqlite",
    "asyncpg>=0.29.0",
    "psycopg[pool,binary]>=3.1.10",
    "psycopg2-binary",
    "psutil>=5.9.8",
    "hypercorn>=0.16.0",
    "daphne>=4.0.0",
]
dev-contrib = ["opentelemetry-sdk", "httpx-sse"]
docs = [
  "sphinx>=7.1.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-toolbox>=3.5.0",
  "blacken-docs>=1.16.0",
  "sphinx-design>=0.5.0",
  "sphinx-click>=4.4.0",
  "sphinxcontrib-mermaid>=0.9.2",
  "auto-pytabs[sphinx]>=0.4.0",
  "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git",
]
linting = [
    "ruff",
    "mypy",
    "pre-commit",
    "slotscheck",
    "pyright==1.1.344",
    "blacken-docs",
    "asyncpg-stubs",
    "types-beautifulsoup4",
    "types-pytest-lazy-fixture",
    "types-python-jose",
    "types-pyyaml",
    "types-redis",
    "types-psutil",
]
test = [
  "covdefaults",
  "pytest<8.0.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-lazy-fixture",
  "pytest-mock",
  "pytest-rerunfailures",
  "pytest-timeout",
  "pytest-xdist",
  "time-machine",
]

[tool.pdm.scripts]
ci = {composite = ["lint", "test"]}
docs-serve = "sphinx-autobuild docs docs/_build/ -j auto --watch litestar --watch docs --watch tests --port 8002"
lint = "pre-commit run --all-files"
test = "pytest tests docs/examples"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.codespell]
ignore-words-list = "selectin"
skip = 'pdm.lock,docs/examples/contrib/sqlalchemy/us_state_lookup.json'

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
omit = ["*/tests/*", "*/litestar/plugins/sqlalchemy.py"]
parallel = true
plugins = ["covdefaults"]
source = ["litestar"]

[tool.coverage.report]
exclude_lines = [
  'except ImportError\b',
  'if VERSION.startswith("1"):',
  'if pydantic.VERSION.startswith("1"):',
]
fail_under = 96

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --dist=loadgroup -m 'not server_integration'"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::trio.TrioDeprecationWarning:anyio._backends._trio*:",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:google.rpc",
  "ignore::DeprecationWarning:google.gcloud",
  "ignore::DeprecationWarning:google.iam",
  "ignore::DeprecationWarning:google",
  "ignore::DeprecationWarning:sphinxcontrib",
  "ignore::DeprecationWarning:litestar.*",
  "ignore::pydantic.PydanticDeprecatedSince20::",
  "ignore:`general_plain_validator_function`:DeprecationWarning::",
  "ignore: 'RichMultiCommand':DeprecationWarning::"  # this is coming from rich_click itself, nothing we can do about
                                                     # that for now
]
markers = [
  "sqlalchemy_integration: SQLAlchemy integration tests",
  "server_integration: Test integration with ASGI server"
]
xfail_strict = true
testpaths = ["tests", "docs/examples/testing"]

[tool.mypy]
packages = ["litestar", "tests"]
plugins = ["pydantic.mypy"]
python_version = "3.8"

disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = false
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ["tests.examples.*", "tests.docker_service_fixtures"]

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["tests.unit.test_kwargs.test_reserved_kwargs_injection"]

[[tool.mypy.overrides]]
module = ["tests.unit.test_contrib.test_repository"]
strict_equality = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "brotli.*",
  "fsspec.*",
  "jsbeautifier.*",
  "pytimeparse.*",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
disableBytesTypePromotions = true
reportUnnecessaryTypeIgnoreComments = true
exclude = [
  "test_apps",
  "tools",
  "docs",
  "tests/examples",
  "tests/docker_service_fixtures.py",
  "litestar/contrib/pydantic/pydantic_dto_factory.py",
  "litestar/contrib/pydantic/pydantic_init_plugin.py",
  "tests/unit/test_contrib/test_sqlalchemy.py",
]
include = ["litestar", "tests"]
pythonVersion = "3.8"

[tool.slotscheck]
strict-imports = false

[tool.ruff]
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "ERA", # eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PLC", # pylint - convention
  "PLE", # pylint - error
  "PLW", # pylint - warning
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle - warning
  "YTT", # flake8-2020
]

ignore = [
  "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010", # flake8-bugbear - do not call setattr with a constant attribute value
  "D100", # pydocstyle - missing docstring in public module
  "D101", # pydocstyle - missing docstring in public class
  "D102", # pydocstyle - missing docstring in public method
  "D103", # pydocstyle - missing docstring in public function
  "D104", # pydocstyle - missing docstring in public package
  "D105", # pydocstyle - missing docstring in magic method
  "D106", # pydocstyle - missing docstring in public nested class
  "D107", # pydocstyle - missing docstring in __init__
  "D202", # pydocstyle - no blank lines allowed after function docstring
  "D205", # pydocstyle - 1 blank line required between summary line and description
  "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
  "E501", # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "RUF012", # Ruff-specific rule - annotated with classvar
  "ISC001", # Ruff formatter incompatible
]
line-length = 120
src = ["litestar", "tests", "docs/examples"]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "pydantic.root_validator",
  "pydantic.validator",
  "sqlalchemy.ext.declarative.declared_attr",
  "sqlalchemy.orm.declared_attr.directive",
  "sqlalchemy.orm.declared_attr",
]

[tool.ruff.isort]
known-first-party = ["litestar", "tests", "examples"]

[tool.ruff.per-file-ignores]
"docs/**/*.*" = ["S", "B", "DTZ", "A", "TCH", "ERA", "D", "RET"]
"docs/examples/**" = ["T201"]
"docs/examples/application_hooks/before_send_hook.py" = ["UP006"]
"docs/examples/contrib/sqlalchemy/plugins/**/*.*" = ["UP006"]
"docs/examples/data_transfer_objects**/*.*" = ["UP006"]
"litestar/_openapi/schema_generation/schema.py" = ["C901"]
"litestar/exceptions/*.*" = ["N818"]
"litestar/handlers/**/*.*" = ["N801"]
"litestar/params.py" = ["N802"]
"test_apps/**/*.*" = ["D", "TRY", "EM", "S", "PTH"]
"tests/**/*.*" = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C901",
  "D",
  "DTZ",
  "EM",
  "FBT",
  "G",
  "N",
  "PGH",
  "PIE",
  "PLR",
  "PLW",
  "PTH",
  "RSE",
  "S",
  "S101",
  "SIM",
  "TCH",
  "TRY",
]
"tests/unit/test_contrib/test_sqlalchemy/**/*.*" = ["UP006"]
"tools/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT"]
"tools/prepare_release.py" = ["S603", "S607"]

[tool.unasyncd]
add_editors_note = true
ruff_fix = true

[tool.unasyncd.files]
"litestar/repository/abc/_async.py" = "litestar/repository/abc/_sync.py"

[tool.unasyncd.per_file_add_replacements."litestar/repository/abc/_async.py"]
"AbstractAsyncRepository" = "AbstractSyncRepository"
"AsyncRepoT" = "SyncRepoT"
